Fix alignment of logo tag with side navigation icons

--- a/scss/_layouts_application-panels.scss
+++ b/scss/_layouts_application-panels.scss
@@ -55,6 +55,7 @@
   .p-panel__tagged-logo {
     @extend %navigation-link;
 
+    margin-left: calc(-1 * ($navigation-logo-tag-width - $navigation-logo-size) / 2);
     padding-left: $sph--x-large;
 
     &:hover {
